--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -112,6 +112,7 @@ jobs:
       with:
         version: latest
         args: --timeout=5m
+        skip-config-verify: true
 
   build:
     name: Build
